--- a/templates/Dockerfile.tmpl
+++ b/templates/Dockerfile.tmpl
@@ -114,7 +114,7 @@ RUN curl -fL https://github.com/direnv/direnv/releases/download/v{{ $direnv }}/d
 
 FROM core AS fzf
 # hadolint ignore=DL4006
-RUN curl -fL https://github.com/junegunn/fzf/releases/download/{{ $fzf }}/fzf-{{ $fzf }}-linux_amd64.tar.gz | tar zx \
+RUN curl -fL https://github.com/junegunn/fzf/releases/download/v{{ $fzf }}/fzf-{{ $fzf }}-linux_amd64.tar.gz | tar zx \
     && mv fzf /tmp
 
 FROM core AS hadolint
@@ -326,8 +326,8 @@ RUN completion="/usr/share/zsh/functions/Completion" \
 RUN just --completions zsh > "$completion/_just.zsh" \
     && gitleaks completion zsh > "$completion/_gitleaks.zsh" \
     && mkdir -p /usr/share/fzf/ \
-    && curl -fsL "https://raw.githubusercontent.com/junegunn/fzf/{{ $fzf }}/shell/key-bindings.zsh" -o "/usr/share/fzf/key-bindings.zsh" \
-    && curl -fsL "https://raw.githubusercontent.com/junegunn/fzf/{{ $fzf }}/shell/completion.zsh" -o "/usr/share/fzf/completion.zsh" \
+    && curl -fsL "https://raw.githubusercontent.com/junegunn/fzf/v{{ $fzf }}/shell/key-bindings.zsh" -o "/usr/share/fzf/key-bindings.zsh" \
+    && curl -fsL "https://raw.githubusercontent.com/junegunn/fzf/v{{ $fzf }}/shell/completion.zsh" -o "/usr/share/fzf/completion.zsh" \
     && curl -fsL "https://raw.githubusercontent.com/go-task/task/v{{ $taskfile }}/completion/zsh/_task" -o "/usr/local/share/zsh/site-functions/_task"
 
 ARG home="/home/user"
