--- a/templates/Dockerfile.tmpl
+++ b/templates/Dockerfile.tmpl
@@ -40,6 +40,7 @@
 {{ $awscli := index .config.tools "aws/aws-cli" -}}
 {{ $gcloud := index .config.tools "GoogleCloudPlatform/cloud-sdk-docker" -}}
 {{ $neovim := index .config.tools "neovim/neovim" -}}
+{{ $golang := index .config.tools "golang/go" -}}
 
 {{ define "apt-get install" }}
 # hadolint ignore=DL3008
@@ -90,10 +91,6 @@ FROM core AS terraform_docs
 RUN curl -fL https://github.com/terraform-docs/terraform-docs/releases/download/v{{ $terraform_docs }}/terraform-docs-v{{ $terraform_docs }}-linux-amd64.tar.gz | tar zx \
     && mv terraform-docs /tmp
 
-FROM core AS terraformer
-# hadolint ignore=DL4006
-RUN curl -fL https://github.com/GoogleCloudPlatform/terraformer/releases/download/{{ $terraformer }}/terraformer-all-linux-amd64 -o /tmp/terraformer \
-    && chmod +x /tmp/terraformer
 
 FROM core AS terrascan
 # hadolint ignore=DL4006
@@ -184,6 +181,32 @@ RUN curl -fL "https://github.com/corneliusweig/ketall/releases/download/v{{ $ket
 
 {{- end }}
 
+{{ if .config.tools.enabled.golang -}}
+FROM core AS golang
+RUN curl -fL https://go.dev/dl/go{{ $golang }}.linux-amd64.tar.gz -o /tmp/golang-package.tar.gz
+
+FROM core AS terraformer
+RUN --mount=type=bind,from=golang,source=/tmp/golang-package.tar.gz,target=/tmp/golang-package.tar.gz \
+    --mount=type=cache,target=/gomod-cache --mount=type=cache,target=/go-cache \
+    tar -C /usr/local -xzf /tmp/golang-package.tar.gz \
+    && export PATH="${PATH}:/usr/local/go/bin" \
+    && go env -w GOCACHE=/go-cache \
+    && go env -w GOMODCACHE=/gomod-cache \
+    && cd /tmp \
+    && git clone https://github.com/GoogleCloudPlatform/terraformer.git terraformer-git \
+    && cd terraformer-git \
+    && /usr/local/go/bin/go mod download \
+    && CGO_ENABLED=0 /usr/local/go/bin/go build -v \
+    && mv terraformer /tmp/terraformer \
+    && rm -rf /tmp/terraformer-git /usr/local/go
+
+{{ else }}
+FROM core AS terraformer
+#hadolint ignore=DL4006
+RUN curl -fL https://github.com/GoogleCloudPlatform/terraformer/releases/download/{{ $terraformer }}/terraformer-all-linux-amd64 -o /tmp/terraformer \
+    && chmod +x /tmp/terraformer
+{{- end }}
+
 FROM core AS drone
 # hadolint ignore=DL4006
 RUN curl -fL https://github.com/harness/drone-cli/releases/download/v{{ $drone }}/drone_linux_amd64.tar.gz | tar zx \
@@ -258,6 +281,7 @@ RUN --mount=type=bind,from=awscliv2,source=/tmp/awscliv2,target=/tmp/awscliv2 /t
 ENV AWS_CLI_VERSION="{{ $awscli }}"
 
 
+
 # hadolint ignore=DL3059
 RUN mkdir -p /etc/tflint.d/plugins
 ENV TFLINT_PLUGIN_DIR /etc/tflint.d/plugins
@@ -311,6 +335,13 @@ RUN ln -s /opt/neovim/bin/nvim /usr/local/bin/nvim
 RUN packer plugins install "{{ $plugin }}"
 {{ end -}}
 
+{{ if .config.tools.enabled.golang -}}
+RUN --mount=type=bind,from=golang,source=/tmp/golang-package.tar.gz,target=/tmp/golang-package.tar.gz tar -C /usr/local -xzf /tmp/golang-package.tar.gz
+
+ENV GOLANG_VERSION="{{ $golang }}"
+{{- end }}
+
+
 ENV GITHUB_VERSIONS={{ template "json-map" $github }}
 
 ENV PIP_VERSIONS={{ template "json-map" .config.tools.pip }}
@@ -362,6 +393,7 @@ RUN git clone --depth 1 --branch v{{ $astronvim }} https://github.com/AstroNvim/
 RUN helm plugin install "https://github.com/databus23/helm-diff" --version "v{{ $helm_diff }}"
 {{- end }}
 
+ENV PATH="$workdir/.ws/bin:${PATH}"
 ENV PATH="$workdir/.ws/bin:${PATH}"
 ENV DIRENV_CONFIG="$workdir/.ws/tools/direnv"
 ENV STARSHIP_CONFIG="$workdir/.ws/tools/starship/config.toml"
