--- a/templates/Dockerfile.tmpl
+++ b/templates/Dockerfile.tmpl
@@ -324,7 +324,8 @@ COPY --from=kube_lineage /tmp/kube-lineage /usr/local/bin/kubectl-lineage
 COPY --from=kubectl_neat /tmp/kubectl-neat /usr/local/bin/kubectl-neat
 COPY --from=ketall /tmp/ketall /usr/local/bin/ketall
 COPY --from=crossplane /tmp/kubectl-crossplane /usr/local/bin/kubectl-crossplane
-COPY --from=argocd /tmp/argocd /usr/local/bin/argocd
+# TODO: Removed for now
+# COPY --from=argocd /tmp/argocd /usr/local/bin/argocd
 {{- end }}
 COPY --from=hadolint /tmp/hadolint /usr/local/bin/hadolint
 COPY --from=gitleaks /tmp/gitleaks /usr/local/bin/gitleaks
@@ -394,8 +395,8 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
 RUN mv "$home/.zshrc" "$home/.zshrc_original" \
     && ln -s "$workdir/.ws/tools/zsh/.zshrc" "$home/.zshrc"
 
-RUN git clone --depth 1 --branch v{{ $astronvim }} https://github.com/AstroNvim/AstroNvim ~/.config/nvim \
-    && git clone --depth 1 https://github.com/vtvz/astronvim ~/.config/astronvim/lua
+# RUN git clone --depth 1 --branch v{{ $astronvim }} https://github.com/AstroNvim/AstroNvim ~/.config/nvim \
+#    && git clone --depth 1 https://github.com/vtvz/astronvim ~/.config/astronvim/lua
 
 {{ if .config.tools.enabled.kubernetes -}}
 # hadolint ignore=DL3059
@@ -412,6 +413,7 @@ ENV STARSHIP_CONFIG="$workdir/.ws/tools/starship/config.toml"
 ENV CLOUDSDK_CONFIG="$workdir/.ws/var/gcloud"
 {{- end }}
 ENV TF_PLUGIN_CACHE_DIR="$workdir/.ws/var/tf/plugin-cache"
+ENV EDITOR=nvim
 
 WORKDIR $workdir
 
